configuration of blockData and add icons

--- a/Inmobiliaria/.eslintrc.json
+++ b/Inmobiliaria/.eslintrc.json
@@ -1,23 +1,21 @@
 {
     "env": {
         "browser": true,
-        "es2021": true,
-        "node": true
+        "es2021": true
     },
     "extends": [
-        "plugin:react/recommended",
-        "google",
-        "eslint:recommended"
+        "eslint:recommended",
+        "plugin:react/recommended"
     ],
     "parserOptions": {
         "ecmaFeatures": {
-          "jsx": true
-        }
+            "jsx": true
+        },
         "ecmaVersion": 12,
         "sourceType": "module"
     },
     "plugins": [
-      "react"
+        "react"
     ],
     "rules": {
     }
