--- a/Inmobiliaria/ios/Inmobiliaria.xcodeproj/xcshareddata/xcschemes/Inmobiliaria.xcscheme
+++ b/Inmobiliaria/ios/Inmobiliaria.xcodeproj/xcshareddata/xcschemes/Inmobiliaria.xcscheme
@@ -15,9 +15,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-               BuildableName = "Inmobiliaria.app"
-               BlueprintName = "Inmobiliaria"
-               ReferencedContainer = "container:Inmobiliaria.xcodeproj">
+               BuildableName = "inmobiliaria.app"
+               BlueprintName = "inmobiliaria"
+               ReferencedContainer = "container:inmobiliaria.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
       </BuildActionEntries>
@@ -33,9 +33,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "00E356ED1AD99517003FC87E"
-               BuildableName = "InmobiliariaTests.xctest"
-               BlueprintName = "InmobiliariaTests"
-               ReferencedContainer = "container:Inmobiliaria.xcodeproj">
+               BuildableName = "inmobiliariaTests.xctest"
+               BlueprintName = "inmobiliariaTests"
+               ReferencedContainer = "container:inmobiliaria.xcodeproj">
             </BuildableReference>
          </TestableReference>
       </Testables>
@@ -55,9 +55,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "Inmobiliaria.app"
-            BlueprintName = "Inmobiliaria"
-            ReferencedContainer = "container:Inmobiliaria.xcodeproj">
+            BuildableName = "inmobiliaria.app"
+            BlueprintName = "inmobiliaria"
+            ReferencedContainer = "container:inmobiliaria.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </LaunchAction>
@@ -72,9 +72,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "Inmobiliaria.app"
-            BlueprintName = "Inmobiliaria"
-            ReferencedContainer = "container:Inmobiliaria.xcodeproj">
+            BuildableName = "inmobiliaria.app"
+            BlueprintName = "inmobiliaria"
+            ReferencedContainer = "container:inmobiliaria.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </ProfileAction>
