--- a/Inmobiliaria/package.json
+++ b/Inmobiliaria/package.json
@@ -11,15 +11,16 @@
   },
   "dependencies": {
     "react": "17.0.2",
-    "react-native": "0.65.1"
+    "react-native": "0.65.1",
+    "react-native-vector-icons": "^8.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
     "@babel/runtime": "^7.12.5",
     "@react-native-community/eslint-config": "^2.0.0",
     "babel-jest": "^26.6.3",
-    "eslint": "^7.32.0",
-    "eslint-config-google": "^0.14.0",
+    "eslint": "^7.14.0",
+    "eslint-plugin-react": "^7.26.0",
     "jest": "^26.6.3",
     "metro-react-native-babel-preset": "^0.66.0",
     "react-native-codegen": "^0.0.7",
